# reverse_engineering_llms

./: .gitignore  README.md  pyproject.toml  result.txt  sync2.sh
baseline/: autoprompt.py  config.json  fluent_prompt.py  forward_projection.py  gcg.py  new_method.py  prompt_tuning.py  prompting.py  run.py  targets.json  testing.py  tests.py  train.py
beginning/: continuous_descent.py  grad_extractor.py
beginning/baseline/: fluent_prompt.py  gcg.py  prompting.py  results_06-24_15-06.json  results_06-24_15-21.json  results_06-24_15-50.json  targets copy.json
beginning/peft/: continuous_efficiency.py  pseudo_inverse.py  task.py
experiments/: README.md  fixed_point_interpretation.py  initialization.py  initialization_comp.py  iterative_interpretation.py  loss_landscape.py  overfitting.py  run.py  success_rates.py
experiments/results/: fixed_point_interpretation_results_2024-09-25_12-03-12.txt  initialization_comp_results_2024-09-11_17-52-32.txt  initialization_results_2024-09-04_15-44-23.txt  initialization_results_2024-09-04_16-34-51.txt  (+37 more)
paper/: README.md  composition.py  fixed_point_interpretation.py  interesting_interpretations.txt  interpretation.py  iterative_interpretation.py  iterative_naive_projection copy.py  iterative_naive_projection.py  naive_projection.py  peft_bug.py  random_attack.py  target.py  utils.py  variations_bug.py
paper/gcg/: README.md  (+3 more)
reverse_engineering_llms/: approx_argmax.py  continuous_descent.py  decoder_only.py  descent.py  discrete_descent.py  grad_extractor.py  llama_test.py  peft_hf.py  stats.py  suffixT5.py  suffix_dd.py
(+87 files in other folders)
