[tool.poetry]
name = "reverse-engineering-llms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.3.0"
ipdb = "^0.13.13"
isort = "^5.13.2"
transformers = "^4.39.3"
datasets = "^2.18.0"
einops = "^0.7.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
